HPC-9268: Fix alignment in operations mega menu in firefox

--- a/html/themes/custom/common_design_subtheme/sass/ghi/_ghi-menu.scss
+++ b/html/themes/custom/common_design_subtheme/sass/ghi/_ghi-menu.scss
@@ -83,6 +83,7 @@
 
           nav[role="navigation"] > ul {
             flex-direction: column;
+            justify-content: flex-start;
             max-height: 450px;
             margin: 2rem 0;
 
